[package]
name = "try-again"
version = "0.1.1"
edition = "2021"
rust-version = "1.56"
authors = ["Lukas Potthast <privat@lukas-potthast.de>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/lpotthast/try-again"
description = """
Retry synchronous and asynchronous operations.
"""
categories = ["asynchronous"]
keywords = ["retry", "async", "retry-async"]

[features]
default = ["sync", "async", "async-tokio"]
sync = []
async = []
async-tokio = ["async", "dep:tokio"]
async-web = ["async", "web-sys/Window", "wasm-bindgen-futures"]

[dependencies]
tokio = { version = "1", features = ["full"], optional = true }
tracing = "0.1"
wasm-bindgen-futures = { version = "0.4.41", optional = true, default-features = false }
web-sys = { version = "0.3.68", optional = false, default-features = false }
